adjusting css/js

--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>PaganStore la</title>
-        <%= stylesheet_link_tag 'index.css'  %>
+        <%= stylesheet_link_tag 'index.css', media: 'all', 'data-turbolinks-track' => true  %>
         <%= javascript_include_tag 'index.js'  %>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,4 @@
         <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
         <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     </head>
-    <body>
         <%= yield %>
-    </body>
-</html>
