--- a/app/views/access/index.html.erb
+++ b/app/views/access/index.html.erb
@@ -9,7 +9,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-angle-double-up"></i>  
                 </a>
             </div>
 
@@ -21,10 +21,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">Store</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">About</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -42,8 +42,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
+                        <h1 class="brand-heading">Pagan Store</h1>
+                        <p class="intro-text">CD's, T-shirts and accessories.</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -53,27 +53,45 @@
         </div>
     </header>
 
+    <section id="cds" class="container content-section">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2><a>CD's</a></h2>
+            </div>
+        </div>
+        <div class="row text-center">
+
+            <%= image_tag 'index/0005280775_10.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/ENSIFERUM.JPG', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/folkearth.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/equilibrium_sagas.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/WarSumSyvWin_zpsac4d5b9f.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/IMG_7405_zpsd4d05ba3.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+        </div>
+    </section>
+
+    <section id="cds" class="container content-section">        
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2><a>T-Shirts</a></h2>
+            </div>
+        </div>
+
+        <div class="row text-center">
+
+            <%= image_tag 'index/t-shirt-pure-fucking-2014-front.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/ELVENKING.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+            <%= image_tag 'index/ENSIFERUM.jpg', "width" => "350", "style" => "margin: 15px", "height" => "260" %>
+
+        </div>
+    </section>
+
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Download Section -->
-    <section id="download" class="content-section text-center">
-        <div class="download-section">
-            <div class="container">
-                <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
-                </div>
+                <h2>About Pagan Store</h2>
+                <p>A Rails starter/basic project of a Web Store. Using Bootstrap, Jquery, and built in Ruby on Rails framework.</p>
             </div>
         </div>
     </section>
@@ -82,19 +100,16 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <h2>Contact Me </h2>
+                <p>Hi! My name is Matheus Victor, i'm a Full Stack Web Developer, currently with PHP as main language, but looking forward in moving to Rails. </p>
+                <p><a href="mailto:hffmatheus@gmail.com">hffmatheus@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://www.linkedin.com/in/matheus-victor-faria-gontijo-3588b9101?trk=nav_responsive_tab_profile_pic" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
-                    </li>
-                    <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://github.com/matheushf" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                     </li>
                 </ul>
             </div>
@@ -104,7 +119,7 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
+            <p>Copyright &copy; matheushf 2016</p>
         </div>
     </footer>
 
