--- a/app/views/layouts/index.html.erb
+++ b/app/views/layouts/index.html.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PaganStore la</title>
-        <%= stylesheet_link_tag 'index.css', media: 'all', 'data-turbolinks-track' => true  %>
-        <%= javascript_include_tag 'index.js'  %>
+        <title>PaganStore</title>
+        <%= stylesheet_link_tag 'man_index.css', media: 'all', 'data-turbolinks-track' => true  %>
+        <%= javascript_include_tag 'man_index.js'  %>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
